--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,6 @@
 [package]
 name = "ref_kind"
-version = "0.1.0"
+version = "0.0.0"
+authors = ["tuguzT <timurka.tugushev@gmail.com>"]
+repository = "https://github.com/toucan-rust/ref_kind"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
