--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "ref_kind"
-version = "0.0.0"
+version = "0.1.0"
 description = "Different reference kinds"
 authors = ["tuguzT <timurka.tugushev@gmail.com>"]
 repository = "https://github.com/toucan-rust/ref_kind"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
+keywords = ["ref", "safe", "mutability"]
+categories = ["data-structures", "rust-patterns"]
 edition = "2021"
