--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ readme = "README.md"
 keywords = ["ref", "safe", "mutability"]
 categories = ["data-structures", "rust-patterns"]
 edition = "2021"
+
+[dependencies]
+hashbrown = "0.12.3"
