--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,8 @@ categories = ["data-structures", "rust-patterns", "no-std"]
 edition = "2021"
 
 [dependencies]
+bumpalo = { version = "3.11.0", optional = true }
 hashbrown = "0.12.3"
+
+[features]
+bumpalo = ["dep:bumpalo", "hashbrown/bumpalo"]
