--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ edition = "2021"
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
+[dependencies.hashbrown]
+version = "0.12.3"
+optional = true
+default-features = false
+features = ["inline-more"]
+
 [features]
 alloc = []
 std = ["alloc"]
+hashbrown = ["dep:hashbrown"]
